--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ nav ul li a:hover{
     width: 315px;
     height: 315px;
     border-radius: 50%;
-    border: 5px solid #eac6d8;
+    border: 1px solid #eac6d8;
     background-color: #c4c4c4;
     display: flex;
     overflow: hidden;
@@ -232,12 +232,37 @@ nav ul li a:hover{
 
 
 
+/* TECHNICAL SKILLS */
+.skills-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 30px;
+}
+.skill-card{
+    border: 1px solid black;
+    /* border-color: #000; */
+    width: 400px;
+    min-height: 180px;
+    margin-bottom: 20px; 
+    border-radius: 5px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    /* gap: ; */
+}
 
+.cog{
+    height: 100px;
+    width: 50px;
+    color: #000;
+}
 
-
-
-
-
+.tool{
+    height: 50px;
+    width: 50px;
+    align-items: center;
+}
 
 
 
