--- a/style.css
+++ b/style.css
@@ -80,66 +80,126 @@ nav ul li a:hover{
 }
 
 /* Hero Section */
-.hero{
+.hero {
     padding-top: 110px;
     padding-left: 120px;
     display: flex;
     min-height: 100vh;
-    /* position: relative; */
-    /* z-index: 1; */
     background-color: #fff;
 }
 
-.firstname h1{
+.firstname h1 {
     font-size: 60px;
-     margin-top: 0;     
-     margin-bottom: 5px; 
+    margin-top: 0;
+    margin-bottom: 5px;
 }
 
-.surname h1{
+.surname {
+    display: flex;
+    align-items: center;
+}
+
+.surname h1 {
     font-size: 60px;
     color: #a30d56;
     line-height: 0.5em;
+    margin-right: 10px;
 }
 
-.hero h2{
+/* 👂 Sound Button */
+.sound-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 22px;
+    color: #524d4d;
+    transition: transform 0.2s ease, color 0.3s;
+}
+
+.sound-btn:hover {
+    color: #a30d56;
+    transform: scale(1.2);
+}
+
+.hero h2 {
     color: rgb(85, 81, 81);
     margin: 25px 0;
     font-size: 29px;
 }
 
-.hero p{
+.hero p {
     font-size: 17px;
 }
 
-.social-icons{
-    /* background-color: #a30d56; */
+.social-icons {
     padding-top: 20px;
 }
 
-.social-icons i{
-        color: #524d4d;
-        /* size: 100px; */
-        border-color: #000;
-        margin: 30px 0;   
-}
-.social-icons a{
-        padding: 7px;
-        border: 9px;
-        border-color: #000;
-        background-color: white;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        /* margin: 100px 0px; */
-        /* background-color: aqua; */
-        justify-items: space-between;
-        margin-right: 8px;
+.social-icons i {
+    color: #524d4d;
+    margin: 30px 0;
 }
 
-.hero-bottom-btn{
+.social-icons a {
+    padding: 7px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 8px;
+}
+
+.hero-bottom-btn {
     margin: 20px 0px;
 }
-.viewproject-btn{
+
+    /* Resume Dropdown */
+.resume-dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.getintouch-btn {
+    background-color: #a30d56;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 14px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.getintouch-btn:hover {
+    opacity: 0.9;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: #333;
+    padding: 10px 14px;
+    text-decoration: none;
+    display: block;
+    transition: background 0.3s;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+/* Show dropdown on hover */
+.resume-dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.viewproject-btn {
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -148,18 +208,18 @@ nav ul li a:hover{
     margin-left: 15px;
 }
 
-.viewproject-btn:hover{
+.viewproject-btn:hover {
     opacity: 0.8;
 }
 
-.viewproject-btn a{
+.viewproject-btn a {
     color: #000;
     text-decoration: none;
     border: none;
     font-size: 15px;
 }
 
-.hero-img{
+.hero-img {
     width: 315px;
     height: 315px;
     border-radius: 50%;
@@ -169,11 +229,11 @@ nav ul li a:hover{
     overflow: hidden;
     align-items: center;
     justify-content: center;
-    margin-left: 180px; 
+    margin-left: 180px;
     margin-top: 60px;
-    /* align-content: center; */
 }
-.hero-img img{
+
+.hero-img img {
     width: 100%;
     height: 100%;
     border-radius: 10%;
@@ -233,17 +293,34 @@ nav ul li a:hover{
 
 
 /* TECHNICAL SKILLS */
+.skills{
+    background-color: #fffdfd;; 
+}
+
+.skills h2{
+    text-align: center;
+}
+.technical {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 2em 5em;
+    /* background-color: aqua; */
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+}
 .skills-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 30px;
+    /* gap: 90px; */
+    /* margin: 50px; */
 }
 .skill-card{
-    border: 1px solid black;
+    border: 1px solid #ccc;
     /* border-color: #000; */
-    width: 400px;
-    min-height: 180px;
+    width: 350px;
+    min-height: 200px;
     margin-bottom: 20px; 
     border-radius: 5px;
     background-color: #fff;
@@ -252,17 +329,52 @@ nav ul li a:hover{
     /* gap: ; */
 }
 
-.cog{
-    height: 100px;
-    width: 50px;
-    color: #000;
-}
-
-.tool{
+.cog, .tool, .database, .lang{
     height: 50px;
     width: 50px;
+    /* align-content: center; */
+    margin-left: 150px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    justify-content: center;
     align-items: center;
+    filter: brightness(0) saturate(100%) invert(16%) sepia(63%) saturate(4717%) hue-rotate(307deg) brightness(70%) contrast(95%);
 }
+.skill-card h3{
+    text-align: center;
+}
+.t-skill span{
+    margin-left: 10px;
+}
+
+/* Experience */
+.experience h2, .project h2{
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .tool{
+    height: 50px;
+    width: 50px;
+    margin-left: 150px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.database{
+    height: 50px;
+    width: 50px;
+} */
 
 
 
